Bug 117817 - Mail merge toolbar isn't refreshed after running mail merge if it was open beforehand
Summary: Mail merge toolbar isn't refreshed after running mail merge if it was open be...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta1+
Hardware: All All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Mail-Merge
  Show dependency treegraph
 
Reported: 2018-05-26 13:05 UTC by Aron Budea
Modified: 2018-05-26 15:02 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2018-05-26 13:05:46 UTC
Run mail merge on any document/data source, but open mail merge toolbar beforehand.

=> The toolbar isn't refreshed right away (counter is at -1, and buttons are greyed out). Clicking into the document refreshes the toolbar.

Observed using an LO 6.2 master build (40e431def06b72cc87226cd50c271b42a1adfbbe) / Windows 7.
Comment 1 Aron Budea 2018-05-26 13:07:08 UTC
Thank for creating a patch for this, Mike!
https://gerrit.libreoffice.org/#/c/54841/
Comment 2 Commit Notification 2018-05-26 15:02:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f304ae0ca4738fa3605587146224ee8972a894f3

tdf#117817: Update Mail Merge controls after wizard completes

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.