tdf#117817: Update Mail Merge controls after wizard completes

Otherwise they may stay disabled until cursor position changes.

Change-Id: If734bbd4793b3b01c64601d68126d5752f5aba0c
Reviewed-on: https://gerrit.libreoffice.org/54841
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>